# LLVM-parser

./: CMakeLists.txt  README.md  exceptions.h  llvm_emul_tests.cpp  llvmir-emul.h  llvmir_emul.cpp  llvmir_tests.h  main.cpp  retdec-llvmir-emul-config.cmake  tmp.cpp  x64_gzip_1_10_gcc_O2.bc  x64_gzip_1_10_gcc_O2.ll
utils/: conversion.cpp  convesion.h  string.cpp  string.h
